--- a/css/contacts.css
+++ b/css/contacts.css
@@ -188,6 +188,17 @@ h2 {
   width: 100%;
 }
 
+.msg {
+  margin: 30px auto;
+  padding: 10px;
+  border-radius: 5px;
+  color: #3c763d;
+  background: #dff0d8;
+  border: 1px solid #3c763d;
+  width: 50%;
+  text-align: center;
+}
+
 ::-webkit-scrollbar {
   width: 0;
 }
