--- a/css/register.css
+++ b/css/register.css
@@ -172,13 +172,14 @@ form {
 }
 
 .msg {
-    margin: 30px auto;
-    padding: 10px;
-    border-radius: 5px;
-    color: #3c763d;
-    background: #dff0d8;
-    border: 1px solid #3c763d;
-    width: 50%;
+    display: block;
+    margin-bottom: 10px;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 1rem;
+    line-height: 1.563rem;
+    border-color: black;
+    color: #22c53d;
     text-align: center;
 }
 
